Fixed Overflow

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,10 @@ body {
     background: #fbfefc;
 }
 
+#root {
+    overflow-x: hidden;
+}
+
 a {
     color: inherit;
     text-decoration: none;
